Correction de l'alignement du header en ajustant la position à droite et ajout d'un nouveau fichier hero.css

--- a/src/css/layout/header.css
+++ b/src/css/layout/header.css
@@ -16,7 +16,7 @@
   display: flex;
   align-items: center;
   position: absolute;
-  right: 20px;
+  right: 0px;
 }
 
 .header__logo {
